update: demo auth & add dictionary_id for dataset
