# server/alembic/versions/6a90fb10437a_add_dictionary_id_to_dataset_model.py
@@ -1,0 +1,31 @@
+"""Add dictionary_id to dataset model
+
+Revision ID: 6a90fb10437a
+Revises: bbe698169c21
+Create Date: 2025-07-23 11:26:18.677569
+
+"""
+from typing import Sequence, Union
+from alembic import op
+import sqlalchemy as sa
+
+
+# revision identifiers, used by Alembic.
+revision: str = '6a90fb10437a'
+down_revision: Union[str, None] = 'bbe698169c21'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('datasets', sa.Column('dictionary_id', sa.BigInteger(), nullable=True))
+    op.create_foreign_key(None, 'datasets', 'dictionaries', ['dictionary_id'], ['id'], ondelete='SET NULL')
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_constraint(None, 'datasets', type_='foreignkey')
+    op.drop_column('datasets', 'dictionary_id')
+    # ### end Alembic commands ### 
